# Agentic_RAG

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py
backend/agents/: agents.py
backend/api/route/: chat.py  upload.py
backend/core/: config.py
backend/db/: qdrant_db.py
backend/models/: document_handler.py  file_handler.py  surya_ocr.py  visual_handler.py
backend/server/: __init__.py
frontend/: Dockerfile  requirements.txt  streamlit_app.py
